Inflater para cards de histórico

--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -25,293 +25,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/caixa_recorde"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:background="#C3D3D3D3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo_jogo" />
-
-    <TextView
-        android:id="@+id/caixa_nota_geral"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="#C3D3D3D3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="202dp" />
-
-    <TextView
-        android:id="@+id/caixa_notas_categorias"
-        android:layout_width="0dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:background="#C3D3D3D3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/caixa_nota_geral" />
-
-    <ImageView
-        android:id="@+id/icn_recorde"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:srcCompat="@drawable/trofeu_estrela_icn"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="112dp" />
-
-    <TextView
-        android:id="@+id/txt_recorde_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="O récorde é de: "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/icn_recorde"
-        app:layout_constraintTop_toTopOf="@+id/icn_recorde" />
-
-    <TextView
-        android:id="@+id/txt_nota_geral_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Foram "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/txt_nota_geral_1"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nota_geral_1" />
-
-    <TextView
-        android:id="@+id/txt_nota_geral_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cada jogo dura +/- "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/txt_nota_geral_2"
-        app:layout_constraintTop_toBottomOf="@+id/jogatinas" />
-
-    <TextView
-        android:id="@+id/txt_nota_geral_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="A nota média desse jogo é "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/circulo_amarelo"
-        app:layout_constraintTop_toTopOf="@+id/circulo_amarelo" />
-
-    <TextView
-        android:id="@+id/txt_notas_categorias_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Essas sao as médias das notas até agora:"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/circulo_amarelo"
-        app:layout_constraintStart_toStartOf="@+id/caixa_notas_categorias"
-        app:layout_constraintTop_toTopOf="@+id/caixa_notas_categorias" />
-
-    <TextView
-        android:id="@+id/txt_nota_geral_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" jogatinas até hoje!"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/jogatinas"
-        app:layout_constraintStart_toEndOf="@+id/jogatinas" />
-
-    <TextView
-        android:id="@+id/responsavel_recorde_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lulu "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/txt_recorde_1"
-        app:layout_constraintTop_toTopOf="@+id/txt_recorde_1" />
-
-    <TextView
-        android:id="@+id/txt_recorde_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" que fez "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/responsavel_recorde_txt"
-        app:layout_constraintStart_toEndOf="@+id/responsavel_recorde_txt" />
-
-    <TextView
-        android:id="@+id/pontuacao_recorde_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="123"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/txt_recorde_1"
-        app:layout_constraintTop_toBottomOf="@+id/txt_recorde_1" />
-
-    <TextView
-        android:id="@+id/data_recorde_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="13/01/2023"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/txt_recorde_3"
-        app:layout_constraintTop_toTopOf="@+id/txt_recorde_3" />
-
-    <TextView
-        android:id="@+id/txt_recorde_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" pontos no dia "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/icn_recorde"
-        app:layout_constraintStart_toEndOf="@+id/pontuacao_recorde_txt"
-        app:layout_constraintTop_toBottomOf="@+id/txt_recorde_1"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/nota_total_txt2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9,25"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_nota_geral_1"
-        app:layout_constraintStart_toEndOf="@+id/txt_nota_geral_1" />
-
-    <TextView
-        android:id="@+id/txt_notas_categoria_mecanica"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Mecânica"
-        android:textAlignment="gravity"
-        android:textColor="#69748C"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/caixa_notas_categorias"
-        app:layout_constraintTop_toBottomOf="@+id/nota_mecanica_pl1" />
-
-    <TextView
-        android:id="@+id/nota_componentes"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="10"
-        android:textAlignment="center"
-        android:textColor="#69748C"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/caixa_notas_categorias"
-        app:layout_constraintTop_toBottomOf="@+id/txt_notas_categorias_1" />
-
-    <TextView
-        android:id="@+id/nota_mecanica_pl1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="9,8"
-        android:textAlignment="center"
-        android:textColor="#69748C"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/txt_notas_categoria_mecanica"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/txt_notas_categoria_mecanica"
-        app:layout_constraintTop_toTopOf="@+id/nota_componentes" />
-
-    <TextView
-        android:id="@+id/nota_experiencia"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="9"
-        android:textColor="#69748C"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/txt_notas_categoria_experiencia"
-        app:layout_constraintStart_toStartOf="@+id/txt_notas_categoria_experiencia"
-        app:layout_constraintTop_toTopOf="@+id/nota_componentes" />
-
-    <Button
-        android:id="@+id/btn_ir_historico"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#C3D3D3D3"
-        android:text="ver histórico de avaliaçoes"
-        android:textColor="#69748C"
-        android:textSize="16sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/caixa_notas_categorias"
-        app:layout_constraintStart_toStartOf="@+id/caixa_notas_categorias"
-        app:layout_constraintTop_toBottomOf="@+id/caixa_notas_categorias" />
-
-    <TextView
-        android:id="@+id/txt_notas_categoria_componentes"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Componentes"
-        android:textAlignment="gravity"
-        android:textColor="#69748C"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/txt_notas_categoria_experiencia"
-        app:layout_constraintStart_toEndOf="@+id/txt_notas_categoria_mecanica"
-        app:layout_constraintTop_toBottomOf="@+id/nota_componentes" />
-
-    <TextView
-        android:id="@+id/txt_notas_categoria_experiencia"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Experiência"
-        android:textAlignment="gravity"
-        android:textColor="#69748C"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/caixa_notas_categorias"
-        app:layout_constraintTop_toBottomOf="@+id/nota_experiencia" />
-
-    <TextView
-        android:id="@+id/jogatinas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="11"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_nota_geral_2"
-        app:layout_constraintStart_toEndOf="@+id/txt_nota_geral_2" />
-
-    <TextView
-        android:id="@+id/tempo_medio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="1h 43min"
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_nota_geral_4"
-        app:layout_constraintStart_toEndOf="@+id/txt_nota_geral_4" />
-
     <Button
         android:id="@+id/btn_jogar"
         android:layout_width="0dp"
@@ -325,66 +38,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/circulo_amarelo"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/caixa_nota_geral"
-        app:layout_constraintStart_toStartOf="@+id/caixa_nota_geral"
-        app:layout_constraintTop_toTopOf="@+id/caixa_nota_geral"
-        app:srcCompat="@drawable/circulo_amarelo" />
-
-    <TextView
-        android:id="@+id/nota_total_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="9,25"
-        android:textColor="#FFFF"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="@+id/circulo_amarelo"
-        app:layout_constraintEnd_toEndOf="@+id/circulo_amarelo"
-        app:layout_constraintStart_toStartOf="@+id/circulo_amarelo"
-        app:layout_constraintTop_toTopOf="@+id/circulo_amarelo" />
-
-    <TextView
-        android:id="@+id/caixa_jogo_nao_jogado"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/caixar_jogo_historico_view"
         android:layout_width="0dp"
-        android:layout_height="115dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="#C3D3D3D3"
-        android:textSize="16sp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_jogar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_ir_historico" />
-
-    <TextView
-        android:id="@+id/txt_jogo_nao_jogado_2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text='Clique em "Jogar" para começar sua primeira jogatina'
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/caixa_jogo_nao_jogado"
-        app:layout_constraintStart_toStartOf="@+id/caixa_jogo_nao_jogado"
-        app:layout_constraintTop_toBottomOf="@+id/txt_jogo_nao_jogado_1" />
-
-    <TextView
-        android:id="@+id/txt_jogo_nao_jogado_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Você ainda nao jogou esse jogo! "
-        android:textColor="#69748C"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/caixa_jogo_nao_jogado"
-        app:layout_constraintTop_toTopOf="@+id/caixa_jogo_nao_jogado" />
+        app:layout_constraintTop_toBottomOf="@+id/titulo_jogo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
