Ajuste nome do jogo

--- a/app/src/main/res/layout/historico_jogo.xml
+++ b/app/src/main/res/layout/historico_jogo.xml
@@ -40,7 +40,8 @@
         android:id="@+id/txt_nota_geral_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cada jogo dura +/- "
+        android:layout_marginTop="8dp"
+        android:text="Cada jogo dura em média "
         android:textColor="#69748C"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/txt_nota_geral_2"
