--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -46,6 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/primeiro_fragment" />
+
     <Button
         android:id="@+id/btn_jogar"
         android:layout_width="0dp"
@@ -74,5 +75,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/segundo_fragment" />
+
+    <ImageView
+        android:id="@+id/icn_editar_jogo"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:tint="#F6F0F0"
+        app:layout_constraintBottom_toTopOf="@+id/btn_jogar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/edit_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
