--- a/app/src/main/res/layout/activity_avaliacao.xml
+++ b/app/src/main/res/layout/activity_avaliacao.xml
@@ -112,17 +112,18 @@
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
+
     <TextView
         android:id="@+id/avaliacao_titulo_jogo"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:background="#B8B8B8"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:text="Conquistadores de Midgard"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textSize="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
