--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
 
     <ImageView
         android:id="@+id/btn_add_game"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:visibility="visible"
@@ -22,20 +22,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/circle"
         app:tint="#EDCE5C" />
-
-    <TextView
-        android:id="@+id/txt_add_game"
-        android:layout_width="0dp"
-        android:layout_height="115dp"
-        android:fontFamily="sans-serif-light"
-        android:text="+"
-        android:textAlignment="center"
-        android:textColor="#FAFAFA"
-        android:textSize="80sp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_add_game"
-        app:layout_constraintEnd_toEndOf="@+id/btn_add_game"
-        app:layout_constraintStart_toStartOf="@+id/btn_add_game"
-        app:layout_constraintTop_toTopOf="@+id/btn_add_game" />
 
     <TextView
         android:id="@+id/jogos"
@@ -59,12 +45,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_add_game"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jogos" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/config"
@@ -76,6 +62,41 @@
         app:layout_constraintTop_toTopOf="@+id/jogos"
         app:srcCompat="@drawable/config"
         app:tint="#FAFAFA" />
+
+    <TextView
+        android:id="@+id/txt_add_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:fontFamily="sans-serif-light"
+        android:text="+"
+        android:textColor="#FAFAFA"
+        android:textSize="80sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_add_game"
+        app:layout_constraintEnd_toEndOf="@+id/btn_add_game"
+        app:layout_constraintStart_toStartOf="@+id/btn_add_game"
+        app:layout_constraintTop_toTopOf="@+id/btn_add_game" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/lista_sort_jogos"
+        app:layout_constraintTop_toBottomOf="@+id/jogos"
+        app:srcCompat="@drawable/sort_up_icn" />
+
+    <ExpandableListView
+        android:id="@+id/lista_sort_jogos"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:divider="@android:color/background_light"
+        android:dividerHeight="0.5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jogos" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
