Cronometrar tempo de preparacao do jogo

--- a/app/src/main/res/layout/activity_cronometro.xml
+++ b/app/src/main/res/layout/activity_cronometro.xml
@@ -84,16 +84,64 @@
         app:srcCompat="@drawable/icn_stop" />
 
     <Button
-        android:id="@+id/encerrarPartida"
+        android:id="@+id/btn_concluir"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="#ECECEC"
         android:fontFamily="sans-serif"
-        android:text="Encerrar partida"
+        android:text="concluir"
         android:textColor="@color/main_purple"
-        android:textSize="28sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline3" />
+
+    <Button
+        android:id="@+id/btn_pular"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="#B4ECECEC"
+        android:fontFamily="sans-serif"
+        android:text="Pular"
+        android:textColor="@color/main_purple"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_preparacao"
+        android:layout_width="350dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cronometro_titulo_jogo"
+        app:srcCompat="@drawable/caixa_cinza_boarda_redonda" />
+
+    <TextView
+        android:id="@+id/txt_etapa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cronometre o tempo de preparação"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_preparacao"
+        app:layout_constraintEnd_toEndOf="@+id/img_preparacao"
+        app:layout_constraintStart_toStartOf="@+id/img_preparacao"
+        app:layout_constraintTop_toTopOf="@+id/img_preparacao" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="202dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
